<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Connect4Optm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="msg_youwin">Well done, you win !</string>
    <string name="msg_p1win">Player 1 has won !</string>
    <string name="msg_p2win">Player 2 has won !</string>
    <string name="msg_youlose">Sorry, you have lost !</string>
    <string name="msg_draw">Uh oh, it\'s a draw!</string>
    <string name="msg_players">Choose your game</string>
    <string name="msg_diff">Choose your options</string>
    <string name="msg_sound">Settings</string>
    <string name="msg_help">Help</string>
    <string name="sureleave">Are you sure you want to quit this game?</string>
    <string name="surerestart">Are you sure you want to restart the game?</string>
    <string name="Size1">Board size (6x7)</string>
    <string name="Size2">Board size (7x8)</string>
    <string name="Size3">Board size (7x10)</string>
    <string name="Alg1">Minimax Algorithm</string>
    <string name="Alg2">Montecarlo Algorithm</string>
    <string name="Alg3">Greedy Algorithm</string>
    <string name="level1">Easy</string>
    <string name="level2">Meduim</string>
    <string name="level3">Hard</string>
    <string name="goFst">Go first</string>
    <string name="goSnd">Go second</string>
    <string name="player1">1 player</string>
    <string name="players2">2 players</string>
    <string name="desc">Description</string>
     <string name="restart">Restart</string>
     <string name="undo">Undo</string>
     <string name="hint">Hint</string>
     <string name="play">Play</string>
     
    
      <string name="MC_hint">MC Hint</string>
     <string name="mm_Easy">MM Easy Hint</string>
     <string name="mm_Hard">MM Hard Hint</string>
     <string name="greedy_hint">Greedy Hint</string>
    

</resources>
